--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,8 +4,8 @@
     <title>RailsAmusementPark</title>
     <%= csrf_meta_tags %>
 
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag "application", media: "all", 'data-turbolinks-track': "reload" %>
+    <%= javascript_include_tag "application", 'data-turbolinks-track': "reload" %>
   </head>
   <body>
     <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
@@ -17,7 +17,14 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-        <a class="navbar-brand" href="<%= root_url %>"/>Home</a>
+        <%= link_to "Home", root_path, class: "navbar-brand" %>
+        <% if !logged_in? %>
+          <%= link_to "Sign Up", new_user_path, class: "navbar-brand" %>
+          <%= link_to "Sign In", signin_path, class: "navbar-brand" %>
+        <% else %>
+          <%= link_to "#{current_user.name}'s profile", user_path(current_user), class: "navbar-brand" %>
+          <%= link_to "Log Out", signout_path, method: "delete", class: "navbar-brand" %>
+        <% end %>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
